# polymarket_websocket

./: .env.example  .gitignore  CLAUDE.md  README.md  UPSTREAM_API_REQUIREMENTS.md  install.sh  pyproject.toml  start.sh  test_polymarket.db-journal  test_quick.py
polymarket_realtime/: __init__.py  config.py  main.py  schemas.py
polymarket_realtime/api/: __init__.py  client.py
polymarket_realtime/database/: __init__.py  models.py  repository.py
polymarket_realtime/forward/: __init__.py  event_bus.py  ws_server.py
polymarket_realtime/services/: __init__.py  market_scanner.py  url_resolver.py
polymarket_realtime/utils/: __init__.py  logging.py  rate_limit.py  retry.py
polymarket_realtime/web/: __init__.py  server.py  stats.py
polymarket_realtime/web/static/: index.html
polymarket_realtime/websocket/: __init__.py  handlers.py  manager.py
